--- a/kv/all_screens.kv
+++ b/kv/all_screens.kv
@@ -537,11 +537,17 @@ Screen:
             theme_text_color: 'Primary'
 
             MDLabel:
-                text: 'Porter ID'
+                markup: True
+                text: '[b]Porter ID[/b]'
                 font_style: 'Subtitle1'
                 size_hint_y: None
                 height: self.texture_size[1]
                 background_color: (1, 1, 1, 0)
+
+            MDLabel:
+                size_hint_y: None
+                height: self.texture_size[1]
+                id: current_date
 
             ScrollView:
                 MDList:
